sql/threadpool_common.cc
@@ -30,6 +30,7 @@
 uint threadpool_min_threads;
 uint threadpool_idle_timeout;
 uint threadpool_size;
+uint threadpool_max_size;
 uint threadpool_stall_limit;
 uint threadpool_max_threads;
 uint threadpool_oversubscribe;
